Adding double quotes removal to js script

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,7 @@
                     })
                     .then(response => response.text())
                     .then(data => {
+                        data = data.replaceAll('"', '')
                         document.getElementById("response").innerHTML = data;
                     })
                     .catch(error => {
