--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,10 @@
     <head>
         <title>Yahoo Finance - Ticker lookup</title>
         <meta charset="UTF-8">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+              rel="stylesheet"
+              integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+              crossorigin="anonymous">
         <script>
         document.addEventListener("DOMContentLoaded", (event) => {
           document.getElementById("ticker_form").addEventListener("input", function (e) {
@@ -44,5 +48,8 @@
                     });
              }
           </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+                crossorigin="anonymous"></script>
     </body>
 </html>
