Adding GitHub link

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,8 @@
             <h1 class="h1"
                 style="border-bottom: 2px solid #ddd; padding: 5px 0">Yahoo Finance - Ticker lookup</h1>
 
+            <p><a target="_blank" href="https://github.com/lcsrodriguez/yf-lookup">GitHub</a></p>
+
             <form method="POST" action="/search" id="ticker_form" style="margin: 50px 0 0 0">
                 <input class="form-control form-control-lg"
                        autofocus
