Adding purple color

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,10 @@
                 padding: 0 15px;
                 margin: 100px auto;
             }
+            .btn-purple{
+                background-color: purple;
+                color: white;
+            }
         </style>
         <script>
         document.addEventListener("DOMContentLoaded", (event) => {
